--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -159,6 +159,7 @@
     .hide-preloader {
         z-index: -9999;
         visibility: hidden;
+        opacity: 0;
     }
     .fixed-nav {
         position: fixed;
