--- a/public/css/main.css
+++ b/public/css/main.css
@@ -812,13 +812,15 @@ html::selection{
   padding-right: 12px;
 }
 
-.contact-card i{
+.contact-card i {
+  aspect-ratio: 1;
+  aspect-ratio: 1 / 1;
   border-radius: 9999px;
   border-width: 4px;
   padding: 10px;
   font-size: 40px;
   --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
+  color: rgb(255 255 255 / var(--tw-text-opacity))
 }
 
 .contact-card h3{
@@ -1263,14 +1265,6 @@ html::selection{
   margin-top: 50px;
 }
 
-.mt-3{
-  margin-top: 0.75rem;
-}
-
-.mt-\[25px\]{
-  margin-top: 25px;
-}
-
 .flex{
   display: flex;
 }
@@ -1313,10 +1307,6 @@ html::selection{
 
 .w-\[35\%\]{
   width: 35%;
-}
-
-.w-\[60\%\]{
-  width: 60%;
 }
 
 .w-\[75\%\]{
@@ -1521,26 +1511,6 @@ html::selection{
 .py-\[15px\]{
   padding-top: 15px;
   padding-bottom: 15px;
-}
-
-.px-\[20px\]{
-  padding-left: 20px;
-  padding-right: 20px;
-}
-
-.px-\[25px\]{
-  padding-left: 25px;
-  padding-right: 25px;
-}
-
-.px-\[35px\]{
-  padding-left: 35px;
-  padding-right: 35px;
-}
-
-.px-\[55px\]{
-  padding-left: 55px;
-  padding-right: 55px;
 }
 
 .pb-\[20px\]{
